--- a/frontend/themes/flowcrmtutorial/styles.css
+++ b/frontend/themes/flowcrmtutorial/styles.css
@@ -1,1 +1,7 @@
-@import url('line-awesome/dist/line-awesome/css/line-awesome.min.css');
+@import url('./views/list-view.css');
+@import url('lumo-css-framework/all-classes.css');
+
+a[highlight] {
+    font-weight: bold;
+    text-decoration: underline;
+}
